updated to latest Java version "25.0.2" 2026-01-20 LTS